--- a/style.css
+++ b/style.css
@@ -779,6 +779,7 @@ table {
     margin-top: 15px;
     border-collapse: collapse;
     font-size: 14px
+    white-space: nowrap;
 }
 
 table thead {
