--- a/style.css
+++ b/style.css
@@ -591,6 +591,15 @@ img {
     text-align: center
 }
 
+video {
+    max-width: 100%;
+    vertical-align: middle;
+    -webkit-user-drag: none;
+    margin: 0 auto;
+    text-align: center
+}
+
+
 figure {
     position: relative
 }
